--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,1 +1,2 @@
-hopefully someday this will be a working webapp yay
+<video id="videoPlayer" controls>
+    <source src="http://localhost:3000/video" type="video/mp4">
